--- a/src/11-password-visual/index.html
+++ b/src/11-password-visual/index.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <title>timer button</title>
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  <div>
-    <label for="pass">密码:</lable>
-    <input type="password" id="pass"/>
+  <div id="main">
+    <div id="box">
+      <label for="pass">密码:</label>
+      <input type="password" class="pass"/>
+    </div>
+    <div class="eye"></div>
   </div>
   <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="./main.js``"></script>
+  <script src="./main.js"></script>
 </body>
 </html>
