--- a/src/dlg-goto/index.html
+++ b/src/dlg-goto/index.html
@@ -6,10 +6,11 @@
   <link rel = "stylesheet" href='./dlg-goto.css'>
 </head>
 <body>
-  <input id="popup" type="button" value="弹出对话框"/>
+  <input id="popup" type="button" value="弹出转到对话框"/>
+  <input id="popup2" type="button" value="弹出对话框"/>
   <br>
   <div id="main">
-  
+  </div>
   </div>  
   <script src="//apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
   <script src="./dlg-goto.js"></script>
