--- a/src/home-4/index.html
+++ b/src/home-4/index.html
@@ -8,23 +8,11 @@
 	</head>
 	<body>
 		<div class="box" id="box">
-			<div class="slider" id="slider">
-				<div class="slide" index="0"><img src="img/b1.png" alt=""></div>
-				<div class="slide" index="1"><img src="img/b2.png" alt=""></div>
-				<div class="slide" index="2"><img src="img/b3.png" alt=""></div>
-				<div class="slide" index="3"><img src="img/b4.png" alt=""></div>
-				<div class="slide" index="4"><img src="img/b5.png" alt=""></div>
-			</div>
-			<span id="left"><<<<</span>
-			<span id="right">>>>></span>
-			<ul class="nav" id="navs">
-				<li index="0" id="active">1</li>
-				<li index="1">2</li>
-				<li index="2">3</li>
-				<li index="3">4</li>
-				<li index="4">5</li>
-			</ul>
+			
 		</div>
 	</body>
 	<script src="./js/main.js"></script>
+	<script>
+		m.show('box')
+	</script>
 </html>
